tests/derive-tests/from/fail/union.err.txt
error: expected `enum`
 --> /tests/derive-tests/from/fail/union.rs:4:5
  |
4 | pub union Union {
  |     ^^^^^
